Migrate to java 8 so it can be compiled